# fractionaxapp

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .npmrc  .prototools  .vercelignore  CHANGES.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  brand.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  render.yaml  renovate.json  tsconfig.json
.github/workflows/: ci.yml  keep-alive.yml
.moon/: tasks.yml  toolchain.yml  workspace.yml
.moon/tasks/: node.yml  python.yml
ai/: README.md
apps/: README.md
deploy/: Dockerfile.agents
docs/adr/: 0001-monorepo-tooling.md  0002-ai-tier-stack.md  0003-compliance-vertical.md
docs/architecture/: agent-system.md  compliance.md
libs/py-core/: README.md  moon.yml  pyproject.toml
libs/py-core/src/fractionax_core/: __init__.py  domain.py
libs/py-core/tests/: test_domain.py  test_money.py  test_money_parity.py
renovate-presets/: default.json
scripts/: add-submodule.sh  bump-submodule.sh  setup-hooks.sh
services/: README.md
test-fixtures/: money-cases.json
